apps/memos/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memos-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: memos-tls
  routes:
    - match: Host(`memos.matiix310.dev`)
      kind: Rule
      services:
        - name: memos
          port: 5230
